--- a/proyectabla/proyectabla.csproj
+++ b/proyectabla/proyectabla.csproj
@@ -74,6 +74,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>postgresDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="productosForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="productosForm.Designer.cs">
+      <DependentUpon>productosForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ubicacionesForm.cs">
@@ -87,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="entradasForm.resx">
       <DependentUpon>entradasForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="productosForm.resx">
+      <DependentUpon>productosForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
